fix menu item hovers on mobile screens

--- a/css/landingpage-max-768.css
+++ b/css/landingpage-max-768.css
@@ -30,7 +30,7 @@
 }
 
 #bs-example-navbar-collapse-1 {
-    height: 12em;
+    height: 13em;
 }
 
 #top-bar {
